spyder_crash.log
Traceback (most recent call last):
  File "/usr/lib/python2.7/dist-packages/spyderlib/spyder.py", line 2331, in main
    mainwindow = run_spyder(app, options, args)
  File "/usr/lib/python2.7/dist-packages/spyderlib/spyder.py", line 2215, in run_spyder
    main.setup()
  File "/usr/lib/python2.7/dist-packages/spyderlib/spyder.py", line 843, in setup
    from spyderlib.plugins.ipythonconsole import IPythonConsole
  File "/usr/lib/python2.7/dist-packages/spyderlib/plugins/ipythonconsole.py", line 34, in <module>
    from IPython.kernel.connect import find_connection_file
  File "/usr/lib/python2.7/dist-packages/IPython/kernel/__init__.py", line 4, in <module>
    from . import zmq
  File "/usr/lib/python2.7/dist-packages/IPython/kernel/zmq/__init__.py", line 16, in <module>
    from .session import Session
  File "/usr/lib/python2.7/dist-packages/IPython/kernel/zmq/session.py", line 53, in <module>
    from zmq.eventloop.ioloop import IOLoop
  File "/usr/lib/python2.7/dist-packages/zmq/eventloop/__init__.py", line 3, in <module>
    from zmq.eventloop.ioloop import IOLoop
  File "/usr/lib/python2.7/dist-packages/zmq/eventloop/ioloop.py", line 35, in <module>
    from tornado.ioloop import PollIOLoop, PeriodicCallback
  File "/usr/local/lib/python2.7/dist-packages/tornado/ioloop.py", line 67
    def fileno(self) -> int:
                     ^
SyntaxError: invalid syntax
